# Cluster

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cluster_autorecover.json  cluster_autorecover.json.bak
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
benches/: performance.rs
docs/architecture/: commercial-completion-audit-2026-07-23.md  connectivity-command-refactor-report.md  connectivity-command-refactor.md  main-upgrade-baseline-2026-07-16.md  product-grade-upgrade-2026-07-20.md  product-upgrade-baseline.md  product-upgrade-progress.md
examples/: performance_probe.rs
notes/: 2025-12-31-note.md
src/: lib.rs  main.rs  mna.rs  performance.rs
src/app/: actions.rs  command_dispatch.rs  history.rs  mod.rs  state.rs
src/commands/: component.rs  context.rs  document.rs  lessons.rs  mod.rs  pcb.rs  properties.rs  selection.rs  wiring.rs
src/editor/: commands.rs  delta.rs  history.rs  mod.rs  selection.rs  wiring.rs
src/engine/: backend.rs  mna.rs  mod.rs  netlist.rs  ngspice.rs  simulation.rs  transient.rs  units.rs  validation.rs  worker.rs
src/examples/: mod.rs
src/export/: gerber.rs  mod.rs  spice.rs  svg.rs
src/lessons/: mod.rs
src/model/: allocator.rs  cad.rs  circuit.rs  component.rs  custom_part.rs  graph.rs  ids.rs  library.rs  mod.rs  net.rs  pin.rs  pin_defs.rs  project.rs  wire.rs
src/pcb/: board.rs  drc.rs  footprint.rs  layer.rs  mod.rs  spatial_index.rs  track.rs  via.rs
src/storage/: autosave.rs  mod.rs  save.rs
src/ui/: app.rs  bottom_dock.rs  bottom_panel.rs  breadboard.rs  canvas.rs  inspector.rs  (+12 more)
(+43 files in other folders)
