[package]
name = "Cluster"
version = "0.2.0"
edition = "2024"

[lib]
name = "cluster"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "performance"
harness = false

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
